--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,12 @@
     <groupId>org.example</groupId>
     <artifactId>aqa-pet</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>Archetype - aqa-pet</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>hw14</module>
+    </modules>
 
 
     <build>
