--- a/hw14/pom.xml
+++ b/hw14/pom.xml
@@ -15,8 +15,10 @@
     <!-- FIXME change it to the project's website -->
     <url>http://maven.apache.org</url>
 
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <log4j2.version>2.14.1</log4j2.version>
     </properties>
 
     <dependencies>
