--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <packaging>pom</packaging>
     <name>Archetype - aqa-pet</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>seleniumHW17</module>
+    </modules>
 
 
     <build>
@@ -27,6 +30,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j2.version>2.22.0</log4j2.version>
+        <selenium.version>3.141.59</selenium.version>
     </properties>
 
     <dependencies>
@@ -71,6 +75,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.10.2</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium-java}</version>
         </dependency>
 
     </dependencies>
